homelab/jafner-dev/web/Service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "web"
  namespace: "default"
spec:
  ports:
  - protocol: "TCP"
    name: web
    port: 8080
  selector:
    app: "web"
